<resources>
    <!-- General -->
    <string name="app_name">OceanTunes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Login & Registration -->
    <string name="login_label">Login</string>
    <string name="register">Register</string>
    <string name="login_button">ACCEDI</string>
    <string name="register_button">REGISTRATI</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Ricordami</string>
    <string name="forgot_pwd">Hai dimenticato la password?</string>
    <string name="or">Oppure</string>
    <string name="register_text">Registrati</string>
    <string name="login_fab">Accedi con</string>
    <string name="username_hint">Username</string>
    <string name="confirm_pwd_hint">Conferma Password</string>
    <string name="login_text">Sei già registrato? Accedi</string>
    <string name="register_fab">Registrati con</string>
    <string name="logo_desc">Logo di OceanTunes</string>
    <string name="spotify_desc">Accedi con Spotify</string>
    <string name="google_desc">Accedi con Google</string>
    <string name="register_button_description">Pulsante registrazione</string>
    <string name="login_button_description">Login pulsante</string>

    <!-- Navigation -->
    <string name="naviga_le_canzoni">Naviga le canzoni del momento!</string>
    <string name="trending_now">In tendenza ora</string>
    <string name="fy">Le più votate</string>
    <string name="top_charts">Top charts</string>
    <string name="find_out_more">Scopri di più</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="aggiungi_ai_preferiti">Aggiungi ai preferiti</string>
    <string name="song_date">Data</string>
    <string name="info_song">Durata\nGenere\nLabel discografica\n</string>
    <string name="chiudi">Chiudi</string>
    <string name="song_name">Nome canzone</string>
    <string name="back">back</string>
    <string name="setting1">Modifica Profilo</string>
    <string name="setting2">Temi</string>
    <string name="setting3">Importa da Spotify</string>
    <string name="setting4">Notifiche</string>
    <string name="setting5">Pass Battaglia</string>
    <string name="setting6">Termini e Condizioni</string>
    <string name="setting7">Esci</string>
    <string name="vota">Vota</string>
    <string name="no_results">Nessun risultato trovato.</string>
    <string name="cosa_vuoi_ascoltare">Cosa vuoi valutare?</string>
    <string name="ricerche_recenti">Ricerche recenti</string>
    <string name="cancella_cronologia">Cancella cronologia</string>
    <string name="preferite">Preferite</string>
    <string name="canzoni_valutate">Canzoni valutate</string>
    <string name="album_format">Album: %s</string>
    <string name="release_date_format">Data di Rilascio: %s</string>
    <string name="credits_format">Crediti: %s</string>
    <string name="default_web_client_id">276791796214-o8hch64v2uk3a6qn3996ggpggfrdvvnk.apps.googleusercontent.com</string>
    <string name="favorites_title">Your Favorites</string>
    <string name="rated_songs_title">Your Rated Songs</string>
    <string name="now_playing_title">Now Playing</string>
    <string name="recommended_title">Recommended for You</string>
</resources>