<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Guideline superiore -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.1" />

    <!-- Guideline inferiore -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.9" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="314dp"
        android:layout_height="155dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/ic_logo_oceantunes"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username -->
    <com.tunagold.oceantunes.ui.components.MaterialTextInput
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/e_mail_hint" />
    </com.tunagold.oceantunes.ui.components.MaterialTextInput>

    <!-- Password -->
    <com.tunagold.oceantunes.ui.components.MaterialTextInput
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/dark" />
    </com.tunagold.oceantunes.ui.components.MaterialTextInput>

    <!-- Checkbox Ricordami -->
    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColor="@color/dark"
        android:textSize="16sp" />

    <!-- Pulsante Accedi -->
    <com.tunagold.oceantunes.ui.components.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:buttonColor="@color/purple3"
        android:minHeight="48dp"
        app:buttonText="@string/login_button"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Password dimenticata -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_pwd"
        android:textColor="@color/purple3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/logoImage"
        app:layout_constraintEnd_toEndOf="@id/logoImage"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <!-- Oppure -->
    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="@id/logoImage"
        app:layout_constraintEnd_toEndOf="@id/logoImage"
        android:text="@string/or"
        android:textColor="@color/dark"
        android:textSize="14sp" />

    <!-- Registrati -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/orText"
        app:layout_constraintStart_toStartOf="@id/logoImage"
        app:layout_constraintEnd_toEndOf="@id/logoImage"
        android:text="@string/register_text"
        android:textColor="@color/purple3"
        android:textSize="14sp" />



    <!-- Divider social login  -->
    <LinearLayout
        android:id="@+id/dividerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/socialLoginContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />
        <TextView
            android:id="@+id/loginWithText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/login_fab"
            android:textColor="@color/dark"
            android:textSize="14sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />
    </LinearLayout>

    <!-- Social login -->
    <LinearLayout
        android:id="@+id/socialLoginContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">
        <!-- Spotify Button -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@android:color/white">

            <ImageButton
                android:id="@+id/spotifyButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_spotify_logo"
                android:contentDescription="@string/spotify_desc"
                android:scaleType="centerInside"
                android:padding="8dp" />
        </com.google.android.material.card.MaterialCardView>

        <!-- Google Button -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@android:color/white">

            <ImageButton
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_google_logo"
                android:contentDescription="@string/google_desc"
                android:scaleType="centerInside"
                android:padding="8dp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
