<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:backgroundTint="@color/white_smoke"
    app:cardCornerRadius="18dp" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="7"
        android:columnCount="2"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" >

        <!-- Titles and Drawable-->

        <ImageView
            android:id="@+id/settingsIcon1"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:contentDescription="@string/setting1"
            android:src="@drawable/ic_profile_fillblack_24dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/setting1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:layout_gravity="start"
            android:textColor="@color/dark"
            android:textSize="12sp"
            android:background="?attr/selectableItemBackground"/>

        <ImageView
            android:id="@+id/settingsIcon2"
            android:layout_width="26dp"
            android:layout_height="18dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/setting2"
            android:src="@drawable/ic_notifications_fillblack_24dp" />

        <TextView
            android:id="@+id/setting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/dark"
            android:paddingBottom="12dp"
            android:textSize="12sp"
            android:background="?attr/selectableItemBackground"/>

        <ImageView
            android:id="@+id/settingsIcon3"
            android:layout_width="26dp"
            android:layout_height="18dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/setting3"
            android:src="@drawable/ic_paragraph_fillblack_24dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/setting3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/dark"
            android:paddingBottom="12dp"
            android:textSize="12sp"
            android:background="?attr/selectableItemBackground"/>

        <ImageView
            android:id="@+id/settingsIcon4"
            android:layout_width="26dp"
            android:layout_height="18dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/setting4"
            android:src="@drawable/ic_exit_fillblack_24dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/setting4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/dark"
            android:paddingBottom="12dp"
            android:textSize="12sp"
            android:background="?attr/selectableItemBackground"/>


    </GridLayout>

</com.google.android.material.card.MaterialCardView>