<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.home.HomeFragment">

        <!-- Titolo principale -->

        <!-- Sottotitolo: Canzoni del momento -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:text="@string/naviga_le_canzoni"
            android:textColor="@color/purple3"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nowSongsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trending_now"
            android:textColor="@color/dark"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <!-- Carosello: Canzoni del momento -->
        <com.tunagold.oceantunes.ui.components.carousel.MaterialCarousel
            android:id="@+id/carouselNowSongs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:itemSpacing="8dp"
            app:layout_constraintTop_toBottomOf="@id/nowSongsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Bottone: Scopri di più -->

        <!-- Sottotitolo: Consigliate per te -->

        <com.tunagold.oceantunes.ui.components.MaterialButton
            android:id="@+id/nowMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            app:buttonColor="@color/white"
            app:buttonText="@string/find_out_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carouselNowSongs"
            app:setIcon="true" />

        <TextView
            android:id="@+id/recommendedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fy"
            android:textColor="@color/dark"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/nowMoreButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />

        <!-- Carosello: Consigliate per te -->
        <com.tunagold.oceantunes.ui.components.carousel.MaterialCarousel
            android:id="@+id/carouselRecommended"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:itemSpacing="8dp"
            app:layout_constraintTop_toBottomOf="@id/recommendedLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Bottone: Scopri di più -->

        <!-- Sottotitolo: Top Charts -->
        <com.tunagold.oceantunes.ui.components.MaterialButton
            android:id="@+id/recommendedMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            app:buttonColor="@color/white"
            app:buttonText="@string/find_out_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carouselRecommended"
            app:setIcon="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>