<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back Button -->
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Sort Button -->
            <ImageView
                android:id="@+id/btn_sort"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/sort"
                android:scaleType="center"
                android:src="@drawable/ic_sort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.763"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Sort Text -->
            <TextView
                android:id="@+id/sort_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A-Z"
                android:textSize="14sp"
                android:textColor="@color/dark"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="@id/btn_sort"
                app:layout_constraintBottom_toBottomOf="@id/btn_sort"
                app:layout_constraintStart_toEndOf="@id/btn_sort" />

            <!-- Filter Button -->
            <ImageView
                android:id="@+id/btn_filter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/filter"
                android:scaleType="center"
                android:src="@drawable/ic_filter"
                app:layout_constraintStart_toEndOf="@id/sort_text"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_songs"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:clipToPadding="false"
                android:paddingBottom="64dp"
                android:scrollbars="none" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
